# OB_GINS

./: CMakeLists.txt
dataset/: ob_gins.yaml
src/: ob_gins.cc
src/common/: earth.h  types.h
src/factors/: gnss_factor.h  marginalization_factor.h
src/fileio/: gnssfileloader.h
src/preintegration/: imu_error_factor.h  integration_state.h  preintegration_base.cc  preintegration_earth_odo.cc  preintegration_normal.cc  preintegration_odo.cc
